Fix Render deployment: specify Python 3.12.10
- Add runtime.txt to pin Python version to 3.12.10
- Update pydantic version constraint for better compatibility
- Fixes pydantic-core compilation issue on Python 3.13

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,7 +12,7 @@ anthropic>=0.71.0
 python-dotenv==1.0.0
 
 # Data Validation
-pydantic==2.5.3
+pydantic>=2.5.3
 
 # CORS Support
 fastapi-cors==0.0.6
