Add .claude/settings.local.json to .gitignore to prevent conflicts

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ backend/content_cache.db-journal
 *.swo
 *~
 
+# Claude Code local settings (user-specific permissions)
+.claude/settings.local.json
+
 # OS
 .DS_Store
 Thumbs.db
